--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,11 @@ logging.level.org.springframework.web.client=debug
 
 api.url=https://api.github.com/
 #api.url=http://127.0.0.1:8090
+
+master.api.user=
+master.api.token=
+
+#rouche
+target-user.api.token=
+
+project.git.root=
